--- a/BimTeamTools/BimTeamTools.csproj
+++ b/BimTeamTools/BimTeamTools.csproj
@@ -61,7 +61,10 @@
       <DependentUpon>FilterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Filter\FilterExCommand.cs" />
+    <Compile Include="Filter\GetElementsFromTreeView.cs" />
     <Compile Include="Filter\GetParamsFromSelectedElements.cs" />
+    <Compile Include="Filter\ListOfOperands.cs" />
+    <Compile Include="Filter\ValuesFromParameter.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
