--- a/BimTeamTools/BimTeamTools.csproj
+++ b/BimTeamTools/BimTeamTools.csproj
@@ -57,13 +57,15 @@
     <Compile Include="App.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Common\Node.cs" />
+    <Compile Include="Filter\CreateParameterFilter.cs" />
     <Compile Include="Filter\FilterView.xaml.cs">
       <DependentUpon>FilterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Filter\FilterExCommand.cs" />
-    <Compile Include="Filter\GetElementsFromTreeView.cs" />
+    <Compile Include="Filter\CollectorFromTreeView.cs" />
     <Compile Include="Filter\GetParamsFromSelectedElements.cs" />
     <Compile Include="Filter\ListOfOperands.cs" />
+    <Compile Include="Filter\ParameterData.cs" />
     <Compile Include="Filter\ValuesFromParameter.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
