--- a/BimTeamTools/BimTeamTools.csproj
+++ b/BimTeamTools/BimTeamTools.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Filter\FilterExCommand.cs" />
     <Compile Include="Filter\CollectorFromTreeView.cs" />
     <Compile Include="Filter\GetParamsFromSelectedElements.cs" />
+    <Compile Include="Filter\ItemsChangeObservableCollection.cs" />
     <Compile Include="Filter\ListOfOperands.cs" />
     <Compile Include="Filter\ParameterData.cs" />
+    <Compile Include="Filter\TreeViewData.cs" />
     <Compile Include="Filter\ValuesFromParameter.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
